modules/wycs/tests/valid/test_022.wyal
assert:
   forall ({int} xs, int x): 
      (x <= |xs| && x != |xs|) ==> x + 1 <= |xs|
