modules/wycs/tests/invalid/test_050.wyal
assert:
  forall({int} xs):
    xs == {} ==> |xs| == 1